--- a/testzlplib/src/main/AndroidManifest.xml
+++ b/testzlplib/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zlp.testzlplib">
 
-    <application>
+    <application
+        android:allowBackup="false"
+        >
         <activity android:name=".SubActivity"></activity>
     </application>
 
